# nilm_metadata

./: pyproject.toml  setup.py
conda.recipe/: meta.yaml
nilm_metadata_s14pe/: __init__.py
nilm_metadata_s14pe/tests/: test_convert_yaml_to_hdf5.py
