[tool.poetry]
name = "nilm-metadata-s14pe"
version = "0.2.5.dev1"
description = 'Concatenate NILM metadata with updated dependencies'
authors = ["FelixS <felix.sievers@baind.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
six = "^1.16.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
